[gd_scene load_steps=3 format=3 uid="uid://player_scene_uid"]

[ext_resource type="Script" path="res://scripts/entities/player.gd" id="1_player"]
[ext_resource type="Texture2D" path="res://assets/sprites/player_placeholder.png" id="2_texture"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 64.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_player")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_texture")
texture_filter = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_1")

[node name="InteractionPrompt" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -60.0
text = "Press E to Interact"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="InteractionTimer" type="Timer" parent="."]
one_shot = true
